--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
   <a href="#">Aksiyalar</a>
   <a href="#">Kontaktlar</a>
 
-  <a href="#">Ro’yxatdan o’tish</a>
+  <a href="#">Ro"yxatdan ot'ish</a>
 
 
   <!-- HERO -->
   <h2>Pythonda dasturlash asoslari</h2>
-  <p>Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir bo‘limi uchun maxsus video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
+  <p>Dasturlash asoslariga oid o'zbek tilidagi ilk eng mukammal qo'llanma. Kitobning har bir bo'limi uchun maxsus video darslar yozilgan bo'lib, ularga kitobda ko'rsatilgan QR kod orqali o'tish mumkin.</p>
   <a href="#">Buyurtma berish</a>
 
   <!-- PYTHON BO'YICHA KITOB RASMI -->
@@ -34,21 +34,21 @@
 
   <!-- FEATURE RASMI -->
   <h3>Oson buyurtma qilish</h3>
-  <p>Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.</p>
+  <p>Akademnashr.uz saytidan o'zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.</p>
 
   <!-- FEATURE RASMI -->
   <h3>Eng sara kitoblar</h3>
-  <p>Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi kitoblarni topa olasiz.</p>
+  <p>Trenddagi eng ommabop, turli auditoriyalarga mo'ljallangan har xil janrdagi kitoblarni topa olasiz.</p>
 
   <!-- FEATURE RASMI -->
   <h3>Tez yetkazib berish</h3>
-  <p>O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida yetkazib beriladi.</p>
+  <p>O'zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida yetkazib beriladi.</p>
 
 
   <!-- AKSIYA -->
   <h2>Bolalar kitoblari uchun ajoyib aksiya!</h2>
-  <p>Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq qo’llanmalari va komikslar.</p>
-  <p>Aksiyadagi eng katta to’plamda <strong>50 ta kitob</strong>ni <strong>350 ming</strong> so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.</p>
+  <p>Ertaklar, she'rlar, sarguzasht asarlar, fikrlashni o'stirish uchun turli mashq qo'llanmalari va komikslar.</p>
+  <p>Aksiyadagi eng katta to'plamda <strong>50 ta kitob</strong>ni <strong>350 ming</strong> so'mga (aslida 383 ming so'm) sotib olishingiz mumkin.</p>
   <a href="#">Buyurtma berish</a>
 
   <!-- AKSIYADAGI KITOBLAR TO'PLAMI RASMI -->
@@ -73,18 +73,18 @@
 
   <a href="#">Ilmiy nashrlar</a>
   <a href="#">Ilmiy-ommabop nashrlar</a>
-  <a href="#">Ma’rifiy nashrlar</a>
-  <a href="#">Lug’atlar</a>
+  <a href="#">Ma'rifiy nashrlar</a>
+  <a href="#">Lug'atlar</a>
   <a href="#">Adabiy-badiiy nashrlar</a>
   <a href="#">Abituriyentlar uchun</a>
   <a href="#">Bolalar uchun</a>
 
-  <a href="#">Ko’p so’raladigan savollar</a>
+  <a href="#">Ko'p so'raladigan savollar</a>
   <a href="#">Yetkazib berish haqida</a>
-  <a href="#">To’lov usullari haqida</a>
+  <a href="#">To'lov usullari haqida</a>
 
-  <a href="#">Bo’sh ish o’rinlari</a>
-  <a href="#">Biz bilan bog’lanish</a>
+  <a href="#">Bo'sh ish o'rinlari</a>
+  <a href="#">Biz bilan bog'lanish</a>
   <a href="#">Maxfiylik nizomi</a>
 
 </body>
