--- a/index.html
+++ b/index.html
@@ -87,5 +87,11 @@
   <a href="#">Biz bilan bog'lanish</a>
   <a href="#">Maxfiylik nizomi</a>
 
+  <ul>
+    <li>men </li>
+    <li>men </li>
+    <li>men </li>
+    <li>men </li>
+  </ul>
 </body>
 </html>
