change_logo_widthandheight

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- SITE HEADER -->
   <a href="index.html">
-    <img src="img/logo.svg" alt="LOGO" >
+    <img src="img/logo.svg" alt="LOGO" width="227" height="60">
     <!-- AKADEMNASHR LOGO RASMI -->
   </a>
 
