--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
   <h2>Nega aynan Akademnashr?</h2>
 
   <!-- FEATURE RASMI -->
-  <img src="img/cursor-click.svg" alt="cursor logo">
+  <img src="img/cursor-click.svg" alt="cursor logo" width="56" height="56">
   <h3>Oson buyurtma qilish</h3>
   <p>Akademnashr.uz saytidan o'zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.</p>
 
   <!-- FEATURE RASMI -->
-  <img src="img/lightning-bolt.svg" alt="lighting logo">
+  <img src="img/lightning-bolt.svg" alt="lighting logo" width="56" height="56">
   <h3>Eng sara kitoblar</h3>
   <p>Trenddagi eng ommabop, turli auditoriyalarga mo'ljallangan har xil janrdagi kitoblarni topa olasiz.</p>
 
   <!-- FEATURE RASMI -->
-  <img src="img/sparkles.svg" alt="sparkles logo">
+  <img src="img/sparkles.svg" alt="sparkles logo" width="56" height="56">
   <h3>Tez yetkazib berish</h3>
   <p>O'zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida yetkazib beriladi.</p>
 
