--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
   <p>Dasturlash asoslariga oid o'zbek tilidagi ilk eng mukammal qo'llanma. Kitobning har bir bo'limi uchun maxsus video darslar yozilgan bo'lib, ularga kitobda ko'rsatilgan QR kod orqali o'tish mumkin.</p>
   <a href="#">Buyurtma berish</a>
 
+  <img src="img/python-book.jpg" alt="python rasm" width="510" height="510"
+  srcset="img/python-book.jpg 1x, img/python-book@2x.jpg 2x">
   <!-- PYTHON BO'YICHA KITOB RASMI -->
 
 
