--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
   <a href="#">Buyurtma berish</a>
 
   <!-- AKSIYADAGI KITOBLAR TO'PLAMI RASMI -->
-
+<img src="img/sale-img.jpg" alt="sale book" width="410" height="410"
+srcset="img/sale-img.jpg 1x, img/sale-img@2x.jpg 2x">
 
   <!-- SITE FOOTER -->
   <a href="index.html">
