--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 
   <!-- SITE HEADER -->
+  <header></header>
   <a href="index.html">
     <img src="img/logo.svg" alt="LOGO" width="227" height="60">
     <!-- AKADEMNASHR LOGO RASMI -->
@@ -21,9 +22,12 @@
   <a href="#">Kontaktlar</a>
 
   <a href="#">Ro"yxatdan ot'ish</a>
-
+</header>
 
   <!-- HERO -->
+  <body>
+
+  </body>
   <h2>Pythonda dasturlash asoslari</h2>
   <p>Dasturlash asoslariga oid o'zbek tilidagi ilk eng mukammal qo'llanma. Kitobning har bir bo'limi uchun maxsus video darslar yozilgan bo'lib, ularga kitobda ko'rsatilgan QR kod orqali o'tish mumkin.</p>
   <a href="#">Buyurtma berish</a>
@@ -31,7 +35,7 @@
   <img src="img/python-book.jpg" alt="python rasm" width="510" height="510"
   srcset="img/python-book.jpg 1x, img/python-book@2x.jpg 2x">
   <!-- PYTHON BO'YICHA KITOB RASMI -->
-
+<hr>
 
   <!-- FEATURES -->
   <h2>Nega aynan Akademnashr?</h2>
@@ -59,19 +63,22 @@
   <a href="#">Buyurtma berish</a>
 
   <!-- AKSIYADAGI KITOBLAR TO'PLAMI RASMI -->
-<img src="img/sale-img.jpg" alt="sale book" width="410" height="410"
+<img src="img/sale-img.jpg" alt="sale book" width="440" height="440"
 srcset="img/sale-img.jpg 1x, img/sale-img@2x.jpg 2x">
-
+</body>
   <!-- SITE FOOTER -->
+  <footer></footer>
   <a href="index.html">
     <!-- AKADEMNASHR LOGO RASMI -->
+    <img src="img/logo.svg" alt="LOGO" width="177" height="38">
   </a>
 
   <!-- IJTIMOIY TARMOQLAR -->
+  img
   <a href="https://t.me/Akademnashr" target="_blank">Akademnashr Telegram kanali</a>
   <a href="https://www.facebook.com/Akademnashr" target="_blank">Akademnashr Facebook sahifasi</a>
   <a href="https://www.instagram.com/akademnashr/?hl=en" target="_blank">Akademnashr Instagram sahifasi</a>
-
+<hr>
   <!-- LINKLAR -->
   <a href="#">Bosh sahifa</a>
   <a href="#">Kitoblar</a>
@@ -94,6 +101,6 @@ srcset="img/sale-img.jpg 1x, img/sale-img@2x.jpg 2x">
   <a href="#">Bo'sh ish o'rinlari</a>
   <a href="#">Biz bilan bog'lanish</a>
   <a href="#">Maxfiylik nizomi</a>
-
+</footer>
 </body>
 </html>
