Add section comments

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
     <a href="index.html">
       <img src="img/logo.svg" alt="LOGO" width="227" height="60">
-      <!-- AKADEMNASHR LOGO RASMI -->
     </a>
-    <!-- <section class="header"> -->
+    <!--SITE NAV-->
+
     <nav>
       <ul class="sitenav-list">
         <li><a class="sitenav-link" href="#">Bosh sahifa</a></li>
@@ -28,7 +28,7 @@
       </ul>
       <a class="main-link" href="#">Royxatdan ot'ish</a>
     </nav>
-    <!-- </section> -->
+
   </header>
 
   <!-- HERO -->
@@ -47,7 +47,7 @@
         <img class="hero-img" src="img/python-book.jpg" alt="python rasm" width="510" height="510"
           srcset="img/python-book.jpg 1x, img/python-book@2x.jpg 2x">
       </div>
-      <!-- PYTHON BO'YICHA KITOB RASMI -->
+
     </section>
     <hr class="orang-line">
 
@@ -110,7 +110,7 @@
   <footer class="site-footer">
     <div>
       <a href="index.html">
-        <!-- AKADEMNASHR LOGO RASMI -->
+
         <img src="img/logo.svg" alt="LOGO" width="227" height="60">
       </a>
 
