add border padding

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         </ul>
       </nav>
       <div class="main-link-buttom">
-      <a class="main-link" href="#">Royxatdan ot'ish</a></div>
+        <a class="main-link" href="#">Royxatdan ot'ish</a>
+      </div>
     </div>
   </header>
 
