--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto:wght@400;500;700&display=swap"
     rel="stylesheet">
   <!--  CSS -->
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -28,10 +29,10 @@
       <!--SITE NAV-->
       <nav>
         <ul class="sitenav-list">
-          <li><a class="sitenav-link" href="#">Bosh sahifa</a></li>
-          <li><a class="sitenav-link" href="#">Kitoblar</a></li>
-          <li><a class="sitenav-link" href="#">Aksiyalar</a></li>
-          <li><a class="sitenav-link" href="#">Kontaktlar</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#">Bosh sahifa</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#">Kitoblar</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#">Aksiyalar</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#">Kontaktlar</a></li>
         </ul>
       </nav>
       <div class="main-link-buttom">
@@ -63,6 +64,7 @@
     <!-- FEATURES -->
     <section class="features">
       <h2 class="feature-heading">Nega aynan Akademnashr?</h2>
+
       <ul class="feature-list">
         <!-- FEATURE RASMI -->
         <li class="feature">
@@ -99,12 +101,14 @@
     <section class="promo">
       <div class="promo-content">
         <h2 class="promo-heading">Bolalar kitoblari uchun ajoyib aksiya!</h2>
-        <p class="promo-text">Ertaklar, she'rlar, sarguzasht asarlar, fikrlashni o'stirish uchun turli mashq
-          qo'llanmalari va komikslar.
-        </p>
-        <p class="promo-text">Aksiyadagi eng katta to'plamda <strong class="promo-higlight">50 ta kitob</strong>ni
-          <strong class="promo-higlight">350 ming</strong> so'mga (aslida 383 ming so'm) sotib olishingiz mumkin.
-        </p>
+        <div class="promo-text-wrapper">
+          <p class="promo-text">Ertaklar, she'rlar, sarguzasht asarlar, fikrlashni o'stirish uchun turli mashq
+            qo'llanmalari va komikslar.
+          </p>
+          <p class="promo-text">Aksiyadagi eng katta to'plamda <strong class="promo-higlight">50 ta kitob</strong>ni
+            <strong class="promo-higlight">350 ming</strong> so'mga (aslida 383 ming so'm) sotib olishingiz mumkin.
+          </p>
+        </div>
         <div class="main-link-buttom"><a class="main-link" href="#">Buyurtma berish</a></div>
       </div>
 
