--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 
   <!-- SITE HEADER -->
   <header class="site-header">
-
-    <div class=" site-header-container container">
+     <div class=" site-header-container container">
       <a class="logo-link" href="index.html">
         <img src="img/logo.svg" alt="LOGO" width="227" height="60">
       </a>
@@ -47,19 +46,21 @@
   <main>
 
     <section class="hero">
-      <div class=" hero-container container">
-        <div class="hero-content">
-          <hr class="orange-line">
-          <h2 class="hero-heading">Pythonda dasturlash asoslari</h2>
-          <p class="hero-text">Dasturlash asoslariga oid o'zbek tilidagi ilk eng mukammal qo'llanma. Kitobning har bir
-            bo'limi uchun maxsus video darslar yozilgan bo'lib, ularga kitobda ko'rsatilgan QR kod orqali o'tish mumkin.
-          </p>
-          <div class="main-link-buttom">
-            <a class="main-link" href="#">Buyurtma berish</a>
+      <div class="contaner">
+        <div class=" hero-container container">
+          <div class="hero-content">
+            <hr class="orange-line">
+            <h2 class="hero-heading">Pythonda dasturlash asoslari</h2>
+            <p class="hero-text">Dasturlash asoslariga oid o'zbek tilidagi ilk eng mukammal qo'llanma. Kitobning har bir
+              bo'limi uchun maxsus video darslar yozilgan bo'lib, ularga kitobda ko'rsatilgan QR kod orqali o'tish mumkin.
+            </p>
+            <div class="main-link-buttom">
+              <a class="main-link" href="#">Buyurtma berish</a>
+            </div>
           </div>
+          <img class="hero-img" src="img/python-book.jpg" alt="python rasm" width="510" height="510"
+            srcset="img/python-book.jpg 1x, img/python-book@2x.jpg 2x">
         </div>
-        <img class="hero-img" src="img/python-book.jpg" alt="python rasm" width="510" height="510"
-          srcset="img/python-book.jpg 1x, img/python-book@2x.jpg 2x">
       </div>
     </section>
 
@@ -91,7 +92,8 @@
           </li>
           <!-- FEATURE RASMI -->
           <li class="feature">
-            <div class="feature-icon-wrapper"><img src="img/sparkles.svg" alt="sparkles logo" width="56" height="56">
+            <div class="feature-icon-wrapper">
+              <img src="img/sparkles.svg" alt="sparkles logo" width="56" height="56">
             </div>
             <h3 class="feature-title">Tez yetkazib berish</h3>
             <p class="feature-info">O'zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish
