--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <!-- SITE HEADER -->
   <header class="site-header">
-     <div class=" site-header-container container">
+    <div class=" site-header-container container">
       <a class="logo-link" href="index.html">
         <img src="img/logo.svg" alt="LOGO" width="227" height="60">
       </a>
@@ -47,21 +47,21 @@
 
     <section class="hero">
 
-        <div class=" hero-container container">
-          <div class="hero-content">
-            <hr class="orange-line">
-            <h2 class="hero-heading">Pythonda dasturlash asoslari</h2>
-            <p class="hero-text">Dasturlash asoslariga oid o'zbek tilidagi ilk eng mukammal qo'llanma. Kitobning har bir
-              bo'limi uchun maxsus video darslar yozilgan bo'lib, ularga kitobda ko'rsatilgan QR kod orqali o'tish mumkin.
-            </p>
-            <div class="main-link-buttom">
-              <a class="main-link" href="#">Buyurtma berish</a>
-            </div>
+      <div class=" hero-container container">
+        <div class="hero-content">
+          <hr class="orange-line">
+          <h2 class="hero-heading">Pythonda dasturlash asoslari</h2>
+          <p class="hero-text">Dasturlash asoslariga oid o'zbek tilidagi ilk eng mukammal qo'llanma. Kitobning har bir
+            bo'limi uchun maxsus video darslar yozilgan bo'lib, ularga kitobda ko'rsatilgan QR kod orqali o'tish mumkin.
+          </p>
+          <div class="main-link-buttom">
+            <a class="main-link" href="#">Buyurtma berish</a>
           </div>
-          <img class="hero-img" src="img/python-book.jpg" alt="python rasm" width="510" height="510"
-            srcset="img/python-book.jpg 1x, img/python-book@2x.jpg 2x">
         </div>
+        <img class="hero-img" src="img/python-book.jpg" alt="python rasm" width="510" height="510"
+          srcset="img/python-book.jpg 1x, img/python-book@2x.jpg 2x">
       </div>
+
     </section>
 
 
@@ -87,7 +87,8 @@
               <img src="img/lightning-bolt.svg" alt="lighting logo" width="56" height="56">
             </div>
             <h3 class="feature-title">Eng sara kitoblar</h3>
-            <p class="feature-info">Trenddagi eng ommabop, turli auditoriyalarga mo'ljallangan har xil janrdagi kitoblarni
+            <p class="feature-info">Trenddagi eng ommabop, turli auditoriyalarga mo'ljallangan har xil janrdagi
+              kitoblarni
               topa olasiz.</p>
           </li>
           <!-- FEATURE RASMI -->
@@ -108,7 +109,7 @@
     <section class="promo">
       <div class="container">
         <div class="promo-inner">
-         <div class="promo-content">
+          <div class="promo-content">
 
             <h2 class="promo-heading">Bolalar kitoblari uchun ajoyib aksiya!</h2>
             <div class="promo-text-wrapper">
@@ -122,12 +123,12 @@
             <div class="main-link-buttom"><a class="main-link" href="#">Buyurtma berish</a>
             </div>
 
+          </div>
+          <!-- AKSIYADAGI KITOBLAR TO'PLAMI RASMI -->
+          <img class="promo-img" src="img/sale-img.jpg" alt="sale book" width="440" height="440"
+            srcset="img/sale-img.jpg 1x, img/sale-img@2x.jpg 2x">
         </div>
-        <!-- AKSIYADAGI KITOBLAR TO'PLAMI RASMI -->
-        <img class="promo-img" src="img/sale-img.jpg" alt="sale book" width="440" height="440"
-          srcset="img/sale-img.jpg 1x, img/sale-img@2x.jpg 2x">
       </div>
-    </div>
     </section>
   </main>
 
